--- a/Application/PetPal.Web/PetPal.Web.csproj
+++ b/Application/PetPal.Web/PetPal.Web.csproj
@@ -13,5 +13,9 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
+    
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
 
 </Project>
